fix font size on mobile for positions

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -17,7 +17,7 @@ import { Image } from "astro:assets";
       Hi 👋, I'm Juwon Daniel
     </h1>
     <Title client:load />
-    <p class="text-base mt-2 tracking-tighter text-[#6b7280]">
+    <p class="text-base mt-2  text-[#6b7280]">
       I’m the product engineer who can bridge the gap between design and
       engineering to give your product that extra attention to detail to stand
       out from competitors, with beautiful components, dashboards, interactions
