--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,7 @@ import { Image } from "astro:assets";
   <section class="pt-10 md:pt-20 z-20">
     <div class="flex items-center justify-between">
       <img
-        src="https://res.cloudinary.com/bridalmarket/image/upload/c_scale,w_281/v1762945476/Frontend%20Applicaiton%20development/Portfolio%20website/FullSizeRender_2_xfi72c.png"
+        src="https://pbs.twimg.com/profile_images/1784657591592681472/1VKqK1oZ_400x400.jpg"
         alt="Description"
         class="rounded-full w-16 h-16 object-cover"
       />
