--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -419,7 +419,7 @@ import QuickComponentView from "@/components/ui/QuickComponentView";
       <ThemeWrapper>
         <div class="w-full p-2 rounded-2xl border-4 border-[#f3f3f3]">
           <img
-            src=https://res.cloudinary.com/bridalmarket/image/upload/v1747154491/birthsafe_mobile_app_compressed_2_l42dyq.webp"
+            src="https://res.cloudinary.com/bridalmarket/image/upload/v1747154491/birthsafe_mobile_app_compressed_2_l42dyq.webp"
             alt="Buyemejollof dashboard design"
           />
         </div>
