--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -17,7 +17,7 @@ import { Image } from "astro:assets";
       <Socials />
     </div>
     <h1 class="font-inter font-medium text-sm tracking-tighter mb-4 mt-4">
-      Hi 👋, I'm Juwon Daniel, a Product Designer and Frontend Engineer
+      Hi 👋, I'm Juwon Daniel.
     </h1>
     <Title client:load />
     <p class="text-base mt-2 text-[#6b7280]">
