add bujeti images

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -419,8 +419,7 @@ import QuickComponentView from "@/components/ui/QuickComponentView";
       <ThemeWrapper>
         <div class="w-full p-2 rounded-2xl border-4 border-[#f3f3f3]">
           <img
-            src="https://res.cloudinary.com/bridalmarket/image/upload/v1747154491/birthsafe_mobile_app_compressed_2_l42dyq.webp"
-            alt="Buyemejollof dashboard design"
+            src="https://res.cloudinary.com/bridalmarket/image/upload/v1763017627/Screenshot_2025-11-13_at_8.03.44_AM_klpvjg.png"
           />
         </div>
       </ThemeWrapper>
@@ -862,6 +861,12 @@ import QuickComponentView from "@/components/ui/QuickComponentView";
               src="https://res.cloudinary.com/bridalmarket/image/upload/v1762961465/Frontend%20Applicaiton%20development/Portfolio%20website/Payout_setup_xgza8d.png"
               alt="Buyemejollof dashboard design"
               class="rounded-lg"
+            />
+          </div>
+          <div class="w-full p-2 rounded-2xl border-2 border-[#f3f3f3]">
+            <img
+              src="https://res.cloudinary.com/bridalmarket/image/upload/v1747154491/birthsafe_mobile_app_compressed_2_l42dyq.webp"
+              alt="Buyemejollof dashboard design"
             />
           </div>
         </div>
