--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -837,7 +837,7 @@ import QuickComponentView from "@/components/ui/QuickComponentView";
         <ProjectList client:load projects={favouriteProjects} />
       </ThemeWrapper>
     </section>
-    <section class="py-10">
+    <section class="pb-10">
       <ThemeWrapper>
         <div class="w-full flex flex-col gap-4">
           <div class="w-full p-2 rounded-2xl border-2 border-[#f3f3f3]">
