--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -829,7 +829,7 @@ import QuickComponentView from "@/components/ui/QuickComponentView";
       >
     </section>
 
-    <section class="pt-8 pb-10">
+    <section class="pb-10">
       <ThemeWrapper>
         <div class="flex justify between items-center">
           <h4 class="text-base text-[#6b7280]">Favourite Products</h4>
